--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
         <div class="boxes">
 
             <a href="" class="box">
-                <h1 class="box-title">accardion</h1>
+                <h1 class="box-title">Todo List</h1>
             </a>
 
-            <a href="" class="box">
-                <h1 class="box-title">side menu</h1>
+            <a href="https://side-menu-81yi.vercel.app/" class="box">
+                <h1 class="box-title">Side Menu</h1>
             </a>
 
         </div>
